added more styles

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
           <a href="#" target="_blank"> Xwitter </a>
         </li>
         <li>
-          <a href="#" target="_blank"> real gaming hours </a>
+          <a href="#" target="_blank"> Real Gaming Hours </a>
         </li>
         <li>
-          <a href="#" target="_blank"> céu azul </a>
+          <a href="#" target="_blank"> Céu Azul </a>
         </li>
         <li>
           <a href="#" target="_blank"> link3 </a>
