add more styles fix links fix text

--- a/index.html
+++ b/index.html
@@ -24,24 +24,41 @@
       </div>
       <ul>
         <li>
-          <a href="#" target="_blank"> Xwitter </a>
+          <a href="https://x.com/math_hammer" target="_blank">
+            <ion-icon name="logo-twitter"></ion-icon>
+            <p>Xwitter</p>
+          </a>
         </li>
         <li>
-          <a href="#" target="_blank"> Real Gaming Hours </a>
+          <a href="https://steamcommunity.com/id/SonicMayhenn/" target="_blank">
+            <ion-icon name="logo-steam"> </ion-icon>
+            <p>Real Gaming Hours</p>
+          </a>
         </li>
         <li>
-          <a href="#" target="_blank"> Céu Azul </a>
+          <a
+            href="https://bsky.app/profile/mathhammerx3.bsky.social"
+            target="_blank"
+          >
+            <ion-icon name="at-outline"></ion-icon>
+            <p>Céu Azul</p>
+          </a>
         </li>
         <li>
-          <a href="#" target="_blank"> link3 </a>
+          <a href="https://www.twitch.tv/math_hammer" target="_blank"
+            ><ion-icon name="logo-twitch"></ion-icon>
+            <p>Twitch</p>
+          </a>
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/mathhammer388" target="_blank">
+        <a href="https://github.com/mathhammer389" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
         <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
-        <a href="#"><ion-icon name="logo-youtube"></ion-icon></a>
+        <a href="https://www.youtube.com/@math_hammer">
+          <ion-icon name="logo-youtube"> </ion-icon>
+        </a>
         <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
       </div>
 
